RESOLVED FIXED80069
fix negative flexing in auto sized columns
https://bugs.webkit.org/show_bug.cgi?id=80069
Summary fix negative flexing in auto sized columns
Tony Chang
Reported 2012-03-01 16:46:36 PST
fix negative flexing in auto sized columns
Attachments
Patch (9.62 KB, patch)
2012-03-01 16:51 PST, Tony Chang
no flags
Patch (9.67 KB, patch)
2012-03-01 17:16 PST, Tony Chang
no flags
Patch (9.86 KB, patch)
2012-03-07 10:37 PST, Tony Chang
no flags
Patch (9.79 KB, patch)
2012-03-14 14:25 PDT, Tony Chang
ojan: review+
Tony Chang
Comment 1 2012-03-01 16:51:08 PST
Tony Chang
Comment 2 2012-03-01 16:51:57 PST
I don't love the name resolveLogicalHeightUsing because it's very similar to computeLogicalHeightUsing. Suggestions welcome.
Ojan Vafai
Comment 3 2012-03-01 17:12:36 PST
Comment on attachment 129772 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=129772&action=review So much copy paste from RenderBox. :( I don't see a better way though. > Source/WebCore/rendering/RenderFlexibleBox.cpp:503 > +LayoutUnit RenderFlexibleBox::resolveLogicalHeightUsing(const Length& height) computeContentLogicalHeightUsing?
Tony Chang
Comment 4 2012-03-01 17:16:54 PST
Tony Chang
Comment 5 2012-03-07 10:37:40 PST
Tony Chang
Comment 6 2012-03-07 10:37:51 PST
(In reply to comment #5) > Created an attachment (id=130646) [details] > Patch rebasing
Tony Chang
Comment 7 2012-03-14 14:25:34 PDT
Tony Chang
Comment 8 2012-03-14 14:29:50 PDT
Comment on attachment 131922 [details] Patch Ojan, can you take another look? Now it's just a small amount of code modified from computeLogicalHeight (computeContentLogicalHeightUsing is now in RenderBox), but it's different enough that I don't think there's a good way to refactor to share code.
Tony Chang
Comment 9 2012-03-14 15:56:45 PDT
Note You need to log in before you can comment on or make changes to this bug.