fix negative flexing in auto sized columns https://bugs.webkit.org/show_bug.cgi?id=80069

Reviewed by Ojan Vafai.

Source/WebCore:

New test cases in css3/flexbox/columns-auto-size.html.

* rendering/RenderFlexibleBox.cpp:
(WebCore):
(WebCore::RenderFlexibleBox::computeAvailableFreeSpace): Properly compute this for auto sizing columns. Previously, we would always return 0.
(WebCore::RenderFlexibleBox::layoutFlexItems):
(WebCore::RenderFlexibleBox::runFreeSpaceAllocationAlgorithm): Drop an unnecessary check against undefined. isSpecified covers this for us.
* rendering/RenderFlexibleBox.h:
(RenderFlexibleBox):

LayoutTests:

* css3/flexbox/columns-auto-size-expected.txt:
* css3/flexbox/columns-auto-size.html:

Canonical link: https://commits.webkit.org/98336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110772 268f45cc-cd09-0410-ab3c-d52691b4dbfc